fulcio-server: add html page when humans reach the server via the browser
