# openapi.yaml
@@ -19,14 +19,27 @@ info:
   title: Fulcio
 schemes: [http, https]
 host: fulcio.sigstore.dev
-basePath: /api/v1
+basePath: /
 securityDefinitions:
   Bearer:
     type: apiKey
     in: header
     name: Authorization
 paths:
-  /signingCert:
+  /:
+    get:
+      description: 'open HomePage'
+      operationId: homepage
+      produces:
+        - text/plain
+      responses:
+        200:
+          $ref: '#/responses/OK'
+        400:
+          $ref: '#/responses/BadRequest'
+        default:
+          $ref: '#/responses/InternalServerError'
+  /api/v1/signingCert:
     post:
       security:
         - Bearer: []
@@ -85,6 +98,13 @@ definitions:
         type: string
 
 responses:
+  OK:
+    description: Ok message
+    schema:
+      type: string
+    headers:
+      Content-Type:
+        type: string
   BadRequest:
     description: The content supplied to the server was invalid
     schema:
